feat: Add jextarct command for typesupport.